--- a/src/styles/icon_svg.module.css
+++ b/src/styles/icon_svg.module.css
@@ -6,5 +6,5 @@
 .icon-container {
     display: flex;
     align-items: center;
-    justify-start: flex-start;
+    justify-content: flex-start;
 }
